WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27932
SVGElementInstance::scriptExecutionContext should call document() instead of scriptExecutionContext()
https://bugs.webkit.org/show_bug.cgi?id=27932
Summary
SVGElementInstance::scriptExecutionContext should call document() instead of ...
Adam Barth
Reported
2009-08-02 02:46:30 PDT
As required by Darin Adler. See
Bug 27931
for more information.
Attachments
Patch v1
(1.37 KB, patch)
2009-08-02 02:49 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
SVG Element
(1.37 KB, patch)
2009-08-02 02:59 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
SVG Element
(1.33 KB, patch)
2009-08-02 03:00 PDT
,
Adam Barth
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-08-02 02:49:34 PDT
Created
attachment 33948
[details]
Patch v1
Darin Adler
Comment 2
2009-08-02 02:51:49 PDT
Comment on
attachment 33948
[details]
Patch v1 No typecast is needed since Document is derived from ScriptExecutionContext.
Adam Barth
Comment 3
2009-08-02 02:59:01 PDT
Created
attachment 33949
[details]
SVG Element --- 2 files changed, 15 insertions(+), 1 deletions(-)
Adam Barth
Comment 4
2009-08-02 03:00:08 PDT
Created
attachment 33950
[details]
SVG Element --- 2 files changed, 15 insertions(+), 1 deletions(-)
Adam Barth
Comment 5
2009-08-02 21:12:46 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/svg/SVGElementInstance.cpp Committed
r46711
M WebCore/ChangeLog M WebCore/svg/SVGElementInstance.cpp
r46711
= a1e665b5484e67c93dc15eb53fd8cb7d07a37352 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/46711
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug