2009-08-02  Adam Barth  <abarth@webkit.org>

Reviewed by Darin Adler.

        SVGElementInstance::scriptExecutionContext should call document() instead of scriptExecutionContext()

        https://bugs.webkit.org/show_bug.cgi?id=27932

        There's no reason to pay for a virtual function call in this case.  We

        can just call document() directly because we know that element is a

        Node*.

        * svg/SVGElementInstance.cpp:

        (WebCore::SVGElementInstance::scriptExecutionContext):

Canonical link: https://commits.webkit.org/38317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46711 268f45cc-cd09-0410-ab3c-d52691b4dbfc